--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,1 @@
-body {
-  background: red;
-}
-
-/*# sourceMappingURL=main.css.map */
+body {background: url("../images/logo-adalab-80px.png") center center no-repeat;height: 100vh;}
