--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,6 @@
-body {background: url("../images/logo-adalab-80px.png") center center no-repeat;height: 100vh;}
+body {
+  background: url("../images/logo-adalab-80px.png") center center no-repeat #fff;
+  height: 100vh;
+}
+
+/*# sourceMappingURL=main.css.map */
