--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import 'core/settings';
 
 body {
-	background: url('../images/logo-adalab-80px.png') center center no-repeat;
+	background: url('../images/logo-adalab-80px.png') center center no-repeat #fff;
 	height: 100vh;
 }
