--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,16 @@
 body {
-  background: url("../images/logo-adalab-80px.png") center center no-repeat #fff;
+  background: url("../images/logo-adalab-80px.png") center center no-repeat #ff0000;
   height: 100vh;
+}
+
+@media (min-width: 400px) {
+  body {
+    background-color: blue;
+  }
+
+  .title {
+    background-color: pink;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
