--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,15 +1,6 @@
 @import 'core/settings';
 
 body {
-	background: url('../images/logo-adalab-80px.png') center center no-repeat #ff0000;
+	background: url('../images/logo-adalab-80px.png') center center no-repeat #fff;
 	height: 100vh;
-	@media (min-width: 400px) {
-		background-color: blue;
-	}
-}
-
-.title {
-	@media (min-width: 400px) {
-		background-color: pink;
-	}
 }
