Add class, url and text in link partials

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,6 +1,8 @@
 @import 'core/settings';
+@import 'core/links';
 
 body {
 	background: url('../images/logo-adalab-80px.png') center center no-repeat $color-white;
+	margin: 0;
 	height: 100vh;
 }
