--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -10,6 +10,8 @@
   <div class="page">
     <partial src="_header.html" label="Header"></partial>
     <partial src="_main.html" label="Main"></partial>
+    <partial src="_link.html" aClass="link__adalab" text="Adalab" url="https://adalab.es"></partial>
+    <partial src="_link.html" aClass="link__github" text="GitHub" url="https://github.com"></partial>
   </div>
 </body>
 </html>
