Added viewport to index.html

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Adalab Web Starter Kit</title>
     <link rel="icon" href="./favicon.png" />
     <link rel="stylesheet" href="./assets/css/main.css" />
