--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,1 +1,10 @@
-<main class="page__main">@@label</main>
+<main class="page__main">
+  <h2>Este es el starter kit de Adalab</h2>
+  <p>Lo usamos para aprender:</p>
+  <ul>
+    <li>Sass</li>
+    <li>HTML partials</li>
+    <li>Gulp</li>
+    <li>y muchas cosas más</li>
+  </ul>
+</main>
