--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,1 +1,4 @@
-<header class="page__header">@@label</header>
+<header class="page__header">
+  <img src="./assets/images/logo-adalab.png" alt="Adalab">
+  <h1>@@title</h1>
+</header>
