--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,3 +1,3 @@
-<fotter class="page__footer">
+<footer class="page__footer">
   <small>&copy; Todos los derechos reservados</small>
-</fotter>
+</footer>
