--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,7 +1,7 @@
 <main class="page__main">
   <h2>Este es el starter kit de Adalab</h2>
   <p>Lo usamos para aprender:</p>
-  <ul>
+  <ul class="main__list">
     <li>Sass</li>
     <li>HTML partials</li>
     <li>Gulp</li>
