--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,3 +1,6 @@
 <footer class="page__footer">
-  <small>&copy; Todos los derechos reservados</small>
+  <small>
+    &copy; Todos los derechos reservados
+    <partial src="_link.html" aClass="link__adalab" text="Adalab" url="https://adalab.es"></partial>
+  </small>
 </footer>
