Added routes info and more styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'core/variables';
 @import 'core/reset';
+@import 'components/code';
 @import 'components/links';
 @import 'layout/page';
 @import 'layout/header';
