--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -7,4 +7,34 @@
     <li>Gulp</li>
     <li>y muchas cosas más</li>
   </ul>
+  <p>Si quieres saber cúales son las rutas correctas para:</p>
+  <ul class="main__list">
+    <li>
+      una <code class="code">&lt;img /&gt;</code> mira el fichero
+      <code class="code">./src/html/partials/header.html</code>.
+    </li>
+    <li>
+      y para un <code class="code">background-image</code> mira el fichero
+      <code class="code">./src/html/scss/layout/_page.scss</code>.
+    </li>
+  </ul>
+  <p>
+    Si quieres saber cómo usar un partial HTML dentro de otro partial, busca en la carperta
+    <code class="code">./src/html/index.html</code> y
+    <code class="code">./src/html/partials/main.html</code>, y verás cómo estamos creando estos
+    enlaces:
+  </p>
+  <ul class="main__list">
+    <li>
+      <include
+        src="./link.html"
+        aClass="link__adalab"
+        text="Adalab"
+        url="https://adalab.es"
+      ></include>
+    </li>
+    <li>
+      <include src="./link.html" text="Más info del starter kit" url="./more-info.html"></include>
+    </li>
+  </ul>
 </main>
