--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,7 +1,7 @@
 body {
   padding: 2rem;
   height: 100vh;
-  background: url("../images/logo-adalab.png") center center no-repeat
-    $color-white;
+  background-image: url('../images/bg-adalab.png');
+  background-color: $color-bg;
   font-family: $font-main;
 }
