Change HTML to adapt to new partials and fix some paths.

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
 <header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
+  <img src="./images/logo-adalab.png" alt="Adalab">
+  <h1>{=$title}</h1>
 </header>
