--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -26,15 +26,15 @@
   </p>
   <ul class="main__list">
     <li>
-      <include
-        src="./link.html"
+      <load
+        src="/partials/link.html"
         aClass="link__adalab"
         text="Adalab"
         url="https://adalab.es"
-      ></include>
+      />
     </li>
     <li>
-      <include src="./link.html" text="Más info del starter kit" url="./more-info.html"></include>
+      <load src="/partials/link.html" text="Más info del starter kit" url="./more-info.html" />
     </li>
   </ul>
 </main>
