--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,11 +1,11 @@
 <footer class="page__footer">
   <small>
     &copy; Todos los derechos reservados
-    <include
-      src="./link.html"
+    <load
+      src="/partials/link.html"
       aClass="link__adalab"
       text="Adalab"
       url="https://adalab.es"
-    ></include>
+    />
   </small>
 </footer>
