--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,7 +1,9 @@
+@use '../core/variables' as vars;
+
 body {
-  padding: 2rem;
-  height: 100vh;
-  background-image: url('../images/bg-adalab.png');
-  background-color: $color-bg;
-  font-family: $font-main;
+    padding: 2rem;
+    height: 100vh;
+    background-image: url('../images/bg-adalab.png');
+    background-color: vars.$color-bg;
+    font-family: vars.$font-main;
 }
