Upgrade version for plugins and libraries.

--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -3,7 +3,7 @@
 body {
     padding: 2rem;
     height: 100vh;
-    background-image: url('../images/bg-adalab.png');
+    background-image: url('/images/bg-adalab.png');
     background-color: vars.$color-bg;
     font-family: vars.$font-main;
 }
